# metafsimple

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  readme.md
examples/: demo-wasm-shell.html  demo.cpp
include/: metafsimple.hpp
test/: integration_basic_reports.cpp  integration_ceiling.cpp  integration_chino_visno.cpp  integration_current_weather.cpp  integration_metar_trends.cpp  integration_misc.cpp  integration_missing_data.cpp  integration_parse_simplify_report.cpp  integration_precip_historical.cpp  integration_precip_snow.cpp  integration_report_data.cpp  integration_runway_dir_multiple_data.cpp  integration_runway_state.cpp  integration_rvr.cpp  integration_sea_surface.cpp  integration_sky_condition_main.cpp  integration_taf_trends.cpp  integration_tafs.cpp  integration_temp_pres_historical.cpp  integration_temp_pres_main.cpp  integration_temp_pres_rmk.cpp  integration_visibility_main.cpp  integration_visibility_other.cpp  integration_weather_current.cpp  integration_weather_recent.cpp  integration_wind_data.cpp  integration_wind_historical.cpp  integration_wind_main.cpp  main.cpp  unit_aerodromedataadapter.cpp  unit_basicdataadapter.cpp  unit_comparisons.cpp  unit_currentdataadapter.cpp  unit_datatypes.cpp  unit_essentialsadapter.cpp  unit_essentialsdataadapter.cpp  unit_forecastdataadapter.cpp  unit_metadataadapter.cpp  unit_validate_comparisons.cpp  unit_warninglogger.cpp
test/include/: comparisons.hpp
